Fix about text align

--- a/assets/styles/_mobile.scss
+++ b/assets/styles/_mobile.scss
@@ -162,9 +162,10 @@
         .side{
           width: 100%;
           display: block;
-          padding: 70px 50px;
+          padding: 70px 30px;
 
           .text{
+            width: 100%;
             h2{
               font-size: 42px;
             }
